--- a/introduction.tex
+++ b/introduction.tex
@@ -1,44 +1,53 @@
 \section{Introduction}
 \label{sec:intro}
 
-Over the last few years, the attraction, and thus reliance, on online video streaming P2P systems is continuously growing. 
-As such systems are mainly characterized by being delay intolerant, churn prone and susceptible to attacks, robust data dissemination techniques that can accommodate for large scale applications had been exhaustively studied \cite{sasi2014survey}.
-Among various existing architectures, mesh overlays mostly operate in a pull-based fashion \cite{zhang2014modeling}, where peers exchange available versus required chunks through a periodic buffer-map ($BM$) update.
+Streaming video content is an essential aspect of today's entertainment.\mn[Stef]{maybe find a example on how many people use streaming services} Most streaming applications rely on central providers that have significant resources at their hands and hence distribute content to a large audience in a fast and reliable manner. 
+However, these enormous costs of guaranteeing high quality-of-service when streaming videos impede alternative providers and content, entailing oligopolies. Controlling or influencing these few highly visible provides might allow censorship or propaganda, giving powerful parties the opportunity  to dictate the public opinion and undermine freedom of speech.\mn[Stef]{feel free to remove the censorship/propaganda aspect}   
+Distributing content via a Peer-to-Peer (P2P) network significantly lowers the load that the provider experiences, as participants relay the downloaded content to other participants, eliminating the need that all participants receive their content directly from the source, i.e., the provider. 
+Consequentially, P2P video streaming is an attractive option for novel providers and user-generated content. Furthermore, including 
+P2P video streaming into the service of established providers will reduce their costs and hence should lead to lower rates for customers or decrease the amount of advertisement within the system, depending on providers' business model. 
 
-Several attacks exist, and still evolving, that targets manipulating the $BM$ updates, known as $BM$ cheating attacks \cite{cheatingAnalysis}.
-In a typical $BM$ cheating attack, malicious peers aim to lower the user's streaming experience via lying about the chunks received-required during exchanging $BM$s. 
-Specifically, malicious peers perform the following actions: 
-(a) dropping received chunks including the chunks available in their buffer,
-(b) requesting already received chunks or offering chunks they never received,
-(c) delay sending actual chunks to other peers to out-date their buffer.
-Accordingly, honest peers become more overloaded trying to serve more chunk requests.
-In addition, due to the streaming delay constraint, peers easily experience a low-quality and discontinuous stream.
 
-Although various countermeasures exist \cite{zhang2005coolstreaming, defending2, antiliar}, those solutions render ineffective when cheating attacks is combined with inference attacks \cite{nguyen2016swap,4395124,rbcs}.
-Inference attacks idea is the ability of the attacker to identify the closest peers to the source, i.e., peers directly connected to the source, we refer to those peers as headnodes.
-Intuitively, attacking headnodes can drastically impact the overlay due to the criticality of such peers in dissemination video chunks received from the source to the rest of the overlay.
+However, achieving reliability in the face of a dynamic heterogeneous group of content distributers is challenging. In addition to the inherent unreliability of benign participants, attackers such as competitors can infiltrate the set of peers and perform denial-of-service attacks, which interrupt or delay the distribution of the content with the goal of degrading the quality-of-service. 
 
-In \cite{nguyen2016swap, rbcs, nguyen2014resilience}, countermeasures to inference attacks are proposed. 
-Nevertheless, the attacks proposed are external, i.e., the attacker is assumed to be able to shutdown headnodes only.
-To the best of our knowledge, this is the first work that addresses internal $BM$ cheating attacks in top of inferring the overlay's topology, i.e., the attacker is capable of placing malicious peers as headnodes.
+In general, nodes in a P2P video streaming system connect to a small set of other nodes, called the \emph{neighbor set}. 
+The source of video stream divides the video into \emph{chunks}, which each contain a part of the encoded video, and forwards these chunks to its neighbors. Nodes in the system receive chunks from neighbors and forward them to neighbors that have not previously received the chunks. 
+The selection of neighbors and the choice of which neighbors to receive from or forward to differ between protocols \cite{sasi2014survey}.  Yet, pull-based mesh networks are the predominant method in P2P streaming systems \cite{zhang2014modeling}. In a mesh overlay, peers maintain a buffer-map indicating which chunks they possess.  Neighbors periodically exchange their buffer-maps and requests chunks from neighbors whose buffer-maps indicate possession of the respective chunk. Peers then forward chunks based on the received requests. 
+\mn[Stef]{please check that citations that I moved are still appropriate}
 
-In this work, we focus on the class of internal inference attacks conducting $BM$ cheating attacks, i.e., malicious headnodes conducting cheating attacks.
-In fact, the existing countermeasures that address mitigating external inference attacks through diverse the set or periodically replacing the source's headnodes are inefficient against internal attacks.
-The reason is that once the attacker control the source's headnodes, malicious peers can easily refuse to be swapped, fake reports to the source and launch $BM$ cheating which is harder to deal with as we detail in Section~\ref{sec:Attack}.
+In pull-based systems, there exists three types of denial-of-service attacks, known as buffer-map or $BM$ cheating attacks \cite{cheatingAnalysis}. \mn[Stef]{Does the paper actually call them $BM$ cheating attacks?} The attacker might manipulate its buffer-map or the dissemination of chunks by \mn[Stef]{I don't get why `requesting already received chunks or offering chunks they never received' are in the same category, they seem to have different methods and purposes; 'delay sending chunks or offering chunks that were never received' makes more sense as one category}
+\begin{enumerate}
+\item dropping received chunks and not including them in their buffer-map, hence terminating the forwarding and keeping their neighbors from obtaining these chunks  
+\item requesting already received chunks or offering chunks they never received, thus creating additional load and delays
+\item delay sending actual chunks to other peers, thus risking that these peers do not receive the chunks in time and creating delays in the video 
+\end{enumerate}
+All presented attack strategies either interrupt or delay the video stream directly or increase the load on the system, which might in turn lead to delays and interruptions. 
 
-To that end, our contributions in this work are:
-\begin{itemize}
- \item We show the feasibility of \textit{partially-fully} attacking the source's headnodes, which causes significant degradation in the user's satisfaction.
- \item Proposing a detection mechanism as a countermeasure against \drop adversarial behavior deployed by malicious peers located as headnodes. 
- \drop is the most sophisticated attack when combined with internal inference attack, as we discuss in Section~\ref{sec:Attack}.
-\end{itemize}
+\mn[Stef]{This is the time to argue why we focus on drop, and I am not really sure if my arguments are convincing}
+Of the above attacks, dropping is the most serious attack and hardest to detect.
+In order to see that, first consider an attacker that delays chunks or advertised chunks that they did not receive. A benign node could easily keep track of neighbors that fail to deliver chunks within a certain time. When realizing this behavior, a node can stop requesting chunks from the attacker and even drop it as a neighbor. While delaying chunks might also be a result from overload, these actions also reduce the load on the congested node, hence benefiting the system even if the suspected node is benign. 
+Similarly, detecting repeated requests is simple if the attacker attempts to download a chunk from the same peer multiple times. Hence, the only remaining option for the attacker is to download the chunk from each neighbor exactly once. Even if neighbors do not cooperate to detect such behavior, the amplification of the attack is rather low as the set of neighbors is typically small. 
+In contrast, dropping chunks indicates that neighbors of the attacker have to receive the chunks via different neighbors, entailing an increased  load on these neighbors. Furthermore, neighbors cannot detect such behavior in a straight-forward manner as they will simply assume that the malicious node is far from the source and hence does receive chunks at a later time. 
+Consequentially, we focus on the dropping attack, called \drop in the following. 
 
-Our mechanism focuses on countering \drop cheating behavior. 
-The mechanism's main idea is that peers cooperatively decide on filing a complaint to the source when upon agreeing on a certain dissatisfaction level.
-Accordingly, the source is capable of detecting suspicious headnodes and thus, removes them to restore a stable data dissemination state.
-% On the other hand, we propose a local procedure (no global cooperation between peers) where each peer is able to detect manipulation from malicious peers and accordingly, remove suspicious peers from its own contact list.
+In the past, multiple countermeasures aimed to reduce the severity of $BM$ cheating attacks and \drop in particular. However, the majority of these defences \cite{zhang2005coolstreaming, defending2, antiliar} assumes that the attacker is unaware of the topology of the streaming network and specifically does not know the headnodes, i.e., the peers connected to the source. 
+However, previous work indicates that it is relatively easy to infer the identity of benign headnodes\mn[Stef]{Which of giang's papers was that? add citation} and then target those important nodes. 
+While there are countermeasures to these inference attacks, they rely on an external adversary that can shut-down or replace certain nodes \cite{nguyen2016swap, rbcs, nguyen2014resilience}. Hence, the existing work does not evaluate neither the impact of internal colluding attackers, i.e., attackers that insert nodes under their control into the system pretending to be regular participants, nor protection mechanism against these attacks. 
 
-Through a theoretical and simulation studies, we show that the proposed detection mechanism can fully restore users satisfaction/ experience, with minimal signaling overhead of $<10\%$, up to the range of 80-100\% in worst case scenarios where the attacker is fully occupying the source's headnodes.
+
+In this paper, we  illustrate the effectiveness of internal attacks that benefit from malicious headnodes. \mn[Stef]{Old version: 'We show the feasibility of \textit{partially-fully} attacking the source's headnodes, which causes significant degradation in the user's satisfaction.', don't get it}
+Consequentially, we propose a mechanism for detecting \drop. Our protection mechanism keeps track of the satisfaction of peers. If the satisfaction levels of a group of peers drops below a certain threshold, the source replaces all headnodes associated with the group with randomly chosen peers. Our detection mechanism hence reacts to a low quality-of-service rather than explicitly identifying the misbehavior of one of more specific nodes.
+Note that we focus on attackers that control a low fraction of the nodes, as attackers controlling the majority of the nodes can trivially control most of the communication, even without gaining strategically important positions such as headnodes.    
+
+In an extensive simulation study, we show that the proposed detection mechanism can fully restore users satisfaction/ experience up to the range of 80-100\% in worst case scenarios where the attacker is fully occupying the source's headnodes. 
+Our mechanism only introduces a signaling overhead of $<10\%$, meaning that it is both effective and efficient.
+
+A theoretical analysis complements our concrete practical results, focusing on the opportunities to abuse the detection mechanism. 
+Indeed, the detection algorithm mostly prevents malicious from removing benign headnodes in favor of malicious nodes unless they control a large fraction of the total number of nodes. 
+Furthermore, maintaining malicious headnodes despite generally low satisfaction levels is not possible for the considered attacker. 
+  
+
+
 
 % 
 % at detection malicious behaviors in a fast, low overhead approach while considering the case where the attacker can fully occupy the source's neighbor list with malicious headnodes.
@@ -46,6 +55,7 @@ Through a theoretical and simulation studies, we show that the proposed detectio
 % Once proven malicious, a peer fires a complaint, on behalf of all other participants in the detection process, to the source to remove the detected peer from it's neighbor list,
 % or to generally decide about peers that might be affecting the satisfaction level of non-headnodes.
 \subsection*{Paper Structure}
+\mn[Stef]{I dislike paper structure sections, but that is personally taste; I can deal with them by ignoring them, which is what I did with this one}
 The rest of the paper is organized as follows: Section~\ref{sec:related} discusses the related work and the background.
 In Section~\ref{sec:Attack}, the concepts underlying the attacker model internal attack and the conducted adversarial behaviors are defined.
 The detection mechanism is fully discussed in Section~\ref{sec:detection}, with the theoretical analysis is discussed in Section~\ref{sec:analysis}.
