rw one sentence

--- a/related.tex
+++ b/related.tex
@@ -1,7 +1,7 @@
 \section{Related Work}
 \label{sec:related}
 
-In this section we highlight the most relevant existing work on attacks on online P2P video streaming systems.
+In this section, we highlight relevant contributions with respect to attacks and defences in the context of P2P video streaming systems.
 The most common type of attacks on such systems is pollution attacks \cite{pollution1}. 
 Nonetheless, we do not focus such attack due to: (i) the fact that our proposed internal attack is irrelevant to pollution attacks, and (ii) various detection and mitigation schemes for pollution attacks have been exhaustively studied in literature \cite{pollution2}.
 For example, Network Coding (\textit{NC}) schemes provide an effective light-weight defense against pollution attacks \cite{nc}.
