--- a/ref.bib
+++ b/ref.bib
@@ -122,3 +122,22 @@ year={2007},
 volume={25}, 
 pages={1640-1654}
 }
+@inproceedings{GT, 
+author={{Zegura, E. et al.}}, 
+booktitle={{Proc. INFOCOM}}, 
+title={{How to model an internetwork}}, 
+year={1996}, 
+pages={594--602}
+}
+@ARTICLE{distribution, 
+author={{Veloso, E. et al.}}, 
+journal={{ACM Transactions on Networking}}, 
+title={{A hierarchical characterization of a live streaming media workload}}, 
+year={2006}, 
+volume={14}, 
+pages={133-146}
+}
+@misc{emule,
+  title = {{Emule Digital Content}},
+  howpublished = {\url{http://emule.com}},
+}
