--- a/detection.tex
+++ b/detection.tex
@@ -66,7 +66,7 @@ Table~\ref{tab:acronyms} provides a list of the most important parameters govern
 \begin{figure}
  \centering
  \includegraphics[width=5.5cm,height=6cm]{./Figures/detection.pdf}
-  \caption{Detection mechanism process for \drop. $S$ represents the source peer.}
+  \caption{Detection process for \drop. $S$ represents the source peer.}
 \label{detection-blocks} 
 \end{figure}
 
